@@ -1,2 +1,13 @@
 NGrams
 ======
+
+В дальнейшем - инструмент для идентификации автора на основе метода CNG.
+Пока готов только подсчет и вычисление частот n-грам текстов.
+
+Синтаксис:
+
+NGrams.exe [опции] [файлы]
+
+Опции:
+	--n=<знач.> Длина n-граммы
+	--top=<знач.> Количество отображаемых n-грамм на файл.
