@@ -1,5 +1,12 @@
 2014-03-14  eig  <eig114@gmail.com>
 
+	* Main.cs: Исправление вылета при указании двух одинаковых
+	  имен файла
+
+	* README.md: Добавкление описания
+
+2014-03-14  eig  <eig114@gmail.com>
+
 	* Main.cs: Расширение функционала - может обрабатывать
 	  несколько файлов, принимает аргументы --n=X --top=X,
 	  контролирующие длину n-грам и количество выводимых.
